:recycle: 문자열 리스트 빌더 null-safe 리팩토링 #664